/ @TODO:                                                          \
|        - AWStats:                                                |
|           * gui: disable stats-alias in client menu              |
|           * make sure awstats is called in prerotate             |
\_________________________________________________________________/

2007-07-28 Raphael Geissert
	- GUI:
		* Fixed #526: Undefined index: layout_id in gui/client/*.php
		* Fixed #525: Wrong email validation in gui/orderpanel/address.php
		* Added code functionality to ispcp_debugger.php to change a domain/alias/subdomain/mail account status
		* Some i18n changes

2007-07-27 Raphael Geissert
	- ENGINE:
		* Mailbox data is now also counted in disk quota
		* Apparent size is not used anymore when counting disk quota
	- GUI:
		* Error pages now correctly escape all the < and > characters
		* Fixed error where admin's own logo is not displayed
		* Added the 'super powerful' all in one who_owns_this function
		* Fixed #359: adding a catchall requires an existent mail account

2007-07-26 Raphael Geissert
	- CONFIGS:
		* Reduced PHP_FCGI_MAX_REQUESTS to 500
		* Adding umask 022 to the fcgi starter script
	- GUI:
		* Fixed error where messages being returned by tr() were not being encoded
		* Fixed error where trying to delete the custom logo would actually delete the default one
		* Fixed #508: SQL user privileges aren't revoked when user is assigned to more than one database

2007-07-25 Benedikt Heintel
	- GUI:
		* Fixed #509: Client Execute SQL query shows blank screen when no result set is returned
	- SETUP:
		* Updated: Debian Makefile for Apache

2007-07-24 Benedikt Heintel
	- GUI:
		* Fixed #520: Warning in Edit ftp user
	- SQL:
		* Fixed #518: int(10) unsigned is too small for a traffic counter => bigint(20)
		* Deleted: unused table domain_probs

2007-07-24 Benedikt Heintel
	- GUI:
		* Fixed #517: update_hp.php is sending notification to wrong user

2007-07-23 Raphael Geissert
	- GUI: